--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import '~normalize.css'
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap')
+
+body
+  background-color: rgb(186, 73, 73)
+  -webkit-tap-highlight-color: transparent
+  font-family: 'Ubuntu', sans-serif
+  color: rgb(255, 255, 255)
