feat: background image for app-root

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,10 @@
 
 body
   background-color: rgb(186, 73, 73)
+  background-image: url('./assets/bg.png')
+  background-position: center
+  background-size: cover
+  background-repeat: no-repeat
   -webkit-tap-highlight-color: transparent
   font-family: 'Ubuntu', sans-serif
   color: rgb(255, 255, 255)
