--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,22 +1,44 @@
-.component-container
+.cdk-drag-boundary
   display: flex
-  flex-direction: column
-  align-items: center
   justify-content: center
-  gap: 2rem
-  margin: 2rem auto
+  box-sizing: border-box
+  width: 100%
+  height: max-content
   padding: 1rem
-  width: 40rem
-  border-radius: 1rem
-  background-color: rgba(255, 255, 255, 0.1)
 
-h2
-  font-weight: 500
-  margin: 2rem auto
-  padding: 0 2rem
+  .component-container
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    gap: 2rem
+    position: relative
+    padding: 1rem
+    width: 40rem
+    border-radius: 1rem
+    background-color: rgba(255, 255, 255, 0.1)
+    transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1)
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),0 2px 2px 0 rgba(0, 0, 0, 0.14),0 1px 5px 0 rgba(0, 0, 0, 0.12)
 
-p
-  font-size: 1rem
-  font-weight: 300
-  margin: 2rem auto
-  padding: 0 2rem
+    &:active
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),0 8px 10px 1px rgba(0, 0, 0, 0.14),0 3px 14px 2px rgba(0, 0, 0, 0.12)
+
+    &-handle
+      position: absolute
+      top: 10px
+      right: 10px
+      color: #ccc
+      cursor: move
+      width: 24px
+      height: 24px
+
+  h2
+    font-weight: 500
+    margin: 2rem auto
+    padding: 0 2rem
+
+  p
+    font-size: 1rem
+    font-weight: 300
+    margin: 2rem auto
+    padding: 0 2rem
