feat: pomodoro-controls appear only when timer isn't active

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="pomodoro-controls">
+  <div class="pomodoro-controls" *ngIf="!isAlive">
     <div class="pomodoro-controls-durations">
       <h2>Duração</h2>
       <div class="pomodoro-controls-durations-buttons">
