--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,16 @@
 <div class="header-container">
-  <picture>
-    <img src="../../assets/favicon.png" alt="PomoFi" />
-  </picture>
-  <h1>PomoFi - Timer Pomodoro com Música LoFi</h1>
+  <div class="header-container-left">
+    <picture>
+      <img src="../../assets/favicon.png" alt="PomoFi" />
+    </picture>
+    <h1>PomoFi - Timer Pomodoro com Música LoFi</h1>
+  </div>
+
+  <div class="header-container-rigth">
+    <mat-icon
+      aria-hidden="false"
+      aria-label="Example home icon"
+      fontIcon="live_help"
+    ></mat-icon>
+  </div>
 </div>
