--- a/src/app/header/header.component.sass
+++ b/src/app/header/header.component.sass
@@ -1,11 +1,16 @@
 .header-container
   display: flex
-  justify-content: flex-start
   align-items: center
+  justify-content: space-between
   gap: 1rem
   padding: 0 2rem
   height: 60px
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1)
+
+  &-left
+    display: flex
+    justify-content: flex-start
+    align-items: center
 
   img
     height: 42px
