--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -9,10 +9,11 @@
     justify-content: center
     align-content: center
 
-  & .footer-content a
-    color: #fff
-    text-decoration: none
-    transition: 0.5s
+    & a
+      color: #fff
+      text-decoration: none
+      transition: 0.5s ease all
 
-  & .footer-content a:hover
-    text-decoration: underline
+      &:hover
+        color: #767676
+        text-decoration: underline
