--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,31 +2,26 @@
   <app-header></app-header>
 
   <div class="cdk-drag-boundary">
-    <div class="component-container" cdkDrag cdkDragHandle cdkDragBoundary=".cdk-drag-boundary">
+    <div
+      class="component-container"
+      cdkDrag
+      cdkDragHandle
+      cdkDragBoundary=".cdk-drag-boundary"
+    >
       <app-timer></app-timer>
 
       <app-youtube-player></app-youtube-player>
 
-      <div class="component-container-handle" >
+      <div class="component-container-handle">
         <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+          <path
+            d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"
+          ></path>
           <path d="M0 0h24v24H0z" fill="none"></path>
         </svg>
       </div>
     </div>
-
-
   </div>
-
-
-  <h2>Técnica Pomodoro: como gerenciar seu tempo e ser mais produtivo</h2>
-
-  <p>
-    A Técnica Pomodoro é um método de gerenciamento de tempo desenvolvido por
-    Francesco Cirillo no final dos anos 1980. A técnica consiste na utilização
-    de um cronômetro para dividir o trabalho em períodos de 25 minutos,
-    separados por breves intervalos.
-  </p>
 
   <app-footer></app-footer>
 
