fixed: body background imagem take 100% of the screen
    width: 100vw
    height: 100vh

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,9 @@
     >
       <app-timer></app-timer>
 
-      <app-youtube-player></app-youtube-player>
+      <!-- <app-youtube-player></app-youtube-player> -->
 
+      <!-- Draggable handle icon -->
       <div class="component-container-handle">
         <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
           <path
