--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap')
 
 body
-  width: 100vw
-  height: 100vh
+  width: -webkit-fill-available
+  height: -webkit-fill-available
   background-color: rgb(186, 73, 73)
   background-image: url('./assets/bg.png')
   background-position: center
