refactor: code reformatted with prettier

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
     >
       <app-timer></app-timer>
 
-      <!-- <app-youtube-player></app-youtube-player> -->
+      <app-youtube-player></app-youtube-player>
 
       <!-- Draggable handle icon -->
       <div class="component-container-handle">
