chore(footer): update copyright information

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,21 +4,11 @@
   <div class="footer-content">
     <p>Projetado e desenvolvido usando Angular.</p>
     <p>
-      Copyright &copy; 2022, por
-      <a
-        class="hover:text-green"
-        href="https://alcamargos.me"
-        rel="noopener noreferrer"
-        target="_blank"
-        >Alexsander Lopes Camargos</a
-      >
+      Copyright &copy; 2022 - 2025, por
+      <a class="hover:text-green" href="https://alcamargos.me" rel="noopener noreferrer" target="_blank">Alexsander
+        Lopes Camargos</a>
       -
-      <a
-        href="https://mit-license.org/"
-        rel="noopener noreferrer"
-        target="_blank"
-        >MIT License</a
-      >
+      <a href="https://mit-license.org/" rel="noopener noreferrer" target="_blank">MIT License</a>
     </p>
   </div>
   <!-- FOOTER CONTENT END -->
