--- a/src/app/components/youtube-player/youtube-player.component.html
+++ b/src/app/components/youtube-player/youtube-player.component.html
@@ -1,8 +1,4 @@
 <div class="youtube-player-container">
-  <youtube-player
-    videoId="jfKfPfyJRdk"
-    suggestedQuality="highres"
-    [width]="400"
-    [height]="225"
-  ></youtube-player>
+  <youtube-player videoId="jfKfPfyJRdk" suggestedQuality="highres" [width]="400" [height]="225"
+    (ready)="onReady($event)"></youtube-player>
 </div>
