--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,25 @@
   <app-header></app-header>
 
   <div class="cdk-drag-boundary">
-    <div class="component-container" cdkDragBoundary=".cdk-drag-boundary" cdkDrag cdkDragHandle>
+    <!-- Timer Container -->
+    <div class="component-container" cdkDragBoundary=".cdk-drag-boundary" cdkDrag>
       <app-timer (timerStart)="youtubePlayer.playVideo()" (timerPause)="youtubePlayer.pauseVideo()"></app-timer>
 
+      <div class="component-container-handle" cdkDragHandle>
+        <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+          <path
+            d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+          </path>
+          <path d="M0 0h24v24H0z" fill="none"></path>
+        </svg>
+      </div>
+    </div>
+
+    <!-- YouTube Player Container -->
+    <div class="component-container" cdkDragBoundary=".cdk-drag-boundary" cdkDrag>
       <app-youtube-player #youtubePlayer></app-youtube-player>
 
-      <!-- Draggable handle icon -->
-      <div class="component-container-handle">
+      <div class="component-container-handle" cdkDragHandle>
         <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
           <path
             d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
