--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,5 +1,7 @@
 .cdk-drag-boundary
   display: flex
+  flex-wrap: wrap
+  gap: 1rem
   justify-content: center
   box-sizing: border-box
   width: 100%
