--- a/src/app/components/timer/timer.component.html
+++ b/src/app/components/timer/timer.component.html
@@ -32,7 +32,8 @@
           </div>
 
           <span id="minutes" #inputMinutes [attr.contenteditable]="contentEditable"
-            [ngClass]="{ 'content-editable': contentEditable }">
+            [ngClass]="{ 'content-editable': contentEditable }" (keydown)="validateInput($event, 'minutes')"
+            (blur)="saveValues()">
             {{ minutes | number: "2.0" }}
           </span>
         </div>
@@ -50,7 +51,8 @@
           </div>
 
           <span id="seconds" #inputSeconds [attr.contenteditable]="contentEditable"
-            [ngClass]="{ 'content-editable': contentEditable }">
+            [ngClass]="{ 'content-editable': contentEditable }" (keydown)="validateInput($event, 'seconds')"
+            (blur)="saveValues()">
             {{ seconds | number: "2.0" }}
           </span>
         </div>
