chore: update build config and global styles
- Increase build budgets in angular.json

- Import DragDropModule and MatIconModule

- Restore background image in styles.sass

- Adjust z-index for timer visibility in app.component.sass

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,15 @@
 <div class="app-container">
-  <app-header></app-header>
-
-  <div class="cdk-drag-boundary">
-    <!-- Timer Container -->
-    <div class="component-container" cdkDragBoundary=".cdk-drag-boundary" cdkDrag>
-      <app-timer (timerStart)="youtubePlayer.playVideo()" (timerPause)="youtubePlayer.pauseVideo()"></app-timer>
-
-      <div class="component-container-handle" cdkDragHandle>
-        <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-          <path
-            d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
-          </path>
-          <path d="M0 0h24v24H0z" fill="none"></path>
-        </svg>
-      </div>
-    </div>
-
-    <!-- YouTube Player Container -->
-    <div class="component-container" cdkDragBoundary=".cdk-drag-boundary" cdkDrag>
-      <app-youtube-player #youtubePlayer></app-youtube-player>
-
-      <div class="component-container-handle" cdkDragHandle>
-        <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-          <path
-            d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
-          </path>
-          <path d="M0 0h24v24H0z" fill="none"></path>
-        </svg>
-      </div>
-    </div>
+  <!-- Fixed Timer (Center) -->
+  <div class="timer-container">
+    <app-timer (timerStart)="youtubePlayer.playVideo()" (timerPause)="youtubePlayer.pauseVideo()"></app-timer>
   </div>
 
-  <app-footer></app-footer>
+  <!-- Draggable YouTube Widget -->
+  <div class="youtube-container">
+    <app-youtube-player #youtubePlayer cdkDrag cdkDragBoundary=".app-container"
+      [cdkDragDisabled]="youtubePlayer.isMaximized"></app-youtube-player>
+  </div>
 
-  <router-outlet></router-outlet>
+  <!-- Footer / Dock (Optional, currently just footer info) -->
+  <app-footer></app-footer>
 </div>
