style(footer): update footer layout and styles

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,8 @@
 <footer id="footer">
   <!-- FOOTER CONTENT START -->
   <div class="footer-content">
-    <p>Projetado e desenvolvido usando Angular.</p>
     <p>
-      Copyright &copy; 2022 - 2025, por
+      Projetado e desenvolvido usando Angular. Copyright &copy; 2022 - 2025, por
       <a class="hover:text-green" href="https://alcamargos.me" rel="noopener noreferrer" target="_blank">Alexsander
         Lopes Camargos</a>
       -
