--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -7,16 +7,45 @@
   align-items: center
   justify-content: center
   overflow: hidden
+  background-image: url('/assets/bg.png')
+  background-size: cover
+  background-position: center
+  background-repeat: no-repeat
+
+  // Overlay for better text contrast if needed
+  &::before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background: rgba(0, 0, 0, 0.2)
+    pointer-events: none
+    z-index: 0
+
+app-top-bar
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  z-index: 40
+
+app-dock
+  position: absolute
+  bottom: 2rem
+  z-index: 40
 
 .timer-container
+  position: absolute
+  top: 20%
+  left: calc(50% - 180px)
   z-index: 30
-  // Fixed center position is handled by flexbox on parent
 
 .youtube-container
   position: absolute
-  top: 20px
+  top: 80px
   right: 20px
   z-index: 20
   width: auto
   height: auto
-  // Initial position, user can drag
